<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="theme_dark">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="users_agreement">Пользовательское соглашение</string>
    <string name="share_course">Ссылка на курс по Андроид-разработке в Практикуме: https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="student_email">brekhov.nikita@gmail.com</string>
    <string name="theme_email">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="text_email">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="url_users_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_hint">Поиск</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="no_internet_title">Проблемы со связью</string>
    <string name="no_internet_description">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="something_wrong">Что-то пошло не так</string>
    <string name="refresh">Обновить</string>
    <string name="clear_search_history">Очистить историю</string>
    <string name="search_history">Вы искали</string>
    <string name="favorites">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="empty_library">Ваша медиатека пуста</string>
    <string name="empty_playlist">Вы не создали ни одного плейлиста</string>
    <string name="create_new_playlist">Новый плейлист</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="playlist_create_button">Создать</string>
    <string name="playlist_created">Плейлист %1$s создан</string>
    <string name="track_already_added_to_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="track_has_been_added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="track_add_to_playlist">Добавить в плейлист</string>
    <string name="cancel_close_playlist">Отмена</string>
    <string name="finish_create_playlist">Завершить</string>
    <string name="is_finish_create_playlist">Завершить создание плейлиста?</string>
    <plurals name="tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <plurals name="tracks_count_minute">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="other">%d минут</item>
    </plurals>
    <string name="playlist_share">Поделиться</string>
    <string name="playlist_edit_info">Редактировать информацию</string>
    <string name="playlist_delete">Удалить плейлист</string>
    <string name="is_track_delete">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="is_playlist_delete">Хотите удалить плейлист «%1$s»</string>
    <string name="playlist_save_button">Сохранить</string>
    <string name="track_share_is_empty">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="dialog_yes">Да</string>
    <string name="dialog_no">Нет</string>
    <string name="playlist_edit_title">Редактировать</string>
    <string name="no_track_in_playlist">В этом плейлисте нет треков</string>
</resources>