<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_rounded_corners"
    android:orientation="vertical"
    android:padding="@dimen/padding_little">

    <TextView
        style="@style/TextViewSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/is_finish_create_playlist"
        android:textSize="@dimen/text_size_huge"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/finish_create_playlist"
            style="@style/ButtonNewPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/finish_create_playlist" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_close_playlist"
            style="@style/ButtonNewPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_close_playlist" />
    </LinearLayout>
</LinearLayout>