<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_extra_extra_small"
            android:layout_marginStart="@dimen/margin_extra_extra_small"
            android:layout_marginEnd="@dimen/margin_extra_large">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_extra_extra_small"
                android:layout_marginStart="@dimen/margin_extra_extra_small"
                android:layout_marginEnd="@dimen/margin_huge">

                <TextView
                    style="@style/TitleHead.White"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin_little"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_large"
                    android:layout_marginBottom="@dimen/margin_little"
                    android:text="@string/title" />
            </FrameLayout>
        </FrameLayout>
    </FrameLayout>

    <Button
        android:id="@+id/search"
        style="@style/ButtonMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_big"
        android:layout_weight="1"
        android:text="@string/search"
        app:icon="@drawable/ic_magnifying_glass_large" />

    <Button
        android:id="@+id/library"
        style="@style/ButtonMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_weight="1"
        android:text="@string/library"
        app:icon="@drawable/ic_library" />

    <Button
        android:id="@+id/settings"
        style="@style/ButtonMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_extra_big"
        android:layout_weight="1"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings" />
</LinearLayout>