<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary">

    <TextView
        android:id="@+id/title"
        style="@style/TitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_little"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/create_new_playlist"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/back_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_extra_extra_small"
        android:padding="@dimen/padding_little"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_big"
        android:src="@drawable/background_playlist_image"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.85" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_big"
        android:background="@drawable/background_text_field_outline_inactive"
        android:hint="@string/playlist_name"
        android:inputType="textPersonName"
        android:padding="@dimen/padding_extra_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_container" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_little"
        android:background="@drawable/background_text_field_outline_inactive"
        android:hint="@string/playlist_description"
        android:inputType="textMultiLine"
        android:padding="@dimen/padding_extra_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_button"
        style="@style/TitleHeadDefaultSize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_normal"
        android:enabled="true"
        android:text="@string/playlist_create_button"
        android:textAllCaps="false"
        app:backgroundTint="@color/color_silver_foil"
        app:cornerRadius="@dimen/margin_extra_little"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>