<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_extra_little"
        android:src="@drawable/ic_rectangle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/playlist_image"
            android:layout_width="@dimen/margin_small_large"
            android:layout_height="@dimen/margin_small_large"
            android:layout_marginStart="@dimen/margin_little"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_track_placeholder" />

        <LinearLayout
            android:id="@+id/playlist_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_extra_little"
            android:layout_marginTop="@dimen/margin_extra_little"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/playlist_name"
                style="@style/TrackName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Track Name" />

            <TextView
                android:id="@+id/playlist_track_count"
                style="@style/ArtistNameAndTiming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="157 треков" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/button_share"
        style="@style/TextViewSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_extra_extra_biggest"
        android:text="@string/playlist_share" />

    <TextView
        android:id="@+id/button_edit_playlist"
        style="@style/TextViewSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_extra_extra_big"
        android:text="@string/playlist_edit_info" />

    <TextView
        android:id="@+id/button_delete_playlist"
        style="@style/TextViewSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_extra_extra_big"
        android:layout_marginBottom="@dimen/margin_extra_extra_big"
        android:text="@string/playlist_delete" />
</LinearLayout>